# collab-tasks-backend

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
src/collab_tasks_backend/: config.py  main.py
src/collab_tasks_backend/auth/: jwt.py  routes.py  security.py
src/collab_tasks_backend/models/: task.py  user.py
src/collab_tasks_backend/routers/: task.py
src/collab_tasks_backend/services/: firestore.py  pubsub.py  user_service.py
